@@ -7,6 +7,7 @@
 - fixed parsing dates (lower than 1.1.1970) in the schemas
 - fixed applying `filter` argument in the `BACKUP()` method
 - improved bundle generator in the `$ total4` executable
+- changed arguments position in the `controller.stream()` method
 
 ========================
 0.0.46
